@@ -1,3 +1,8 @@
+2015-02-24  Jon TURNEY  <jon.turney@dronecode.org.uk>
+
+	* libc/include/sys/cdefs.h (_GNU_SOURCE): Move check so it has an
+	effect when _XOPEN_SOURCE is also defined.
+
 2015-02-17  Hale Wang  <hale.wang@arm.com>
 
 	* libc/machine/arm/aeabi_memclr.c: New file to support
